...
                }
                .scrollContentBackground(.hidden)
                .onAppear {
                    viewModel.loadAuthProviders()
                    viewModel.loadAuthUser()
                }
                .navigationTitle("Settings")
                .navigationBarTitleDisplayMode(.inline)
                .alert("Are you sure you'd like to delete your account?", isPresented: $deleteAccountConfirmation, actions: {
                    Button("Delete", role: .destructive) {
                        if viewModel.authUser?.isAnonymous == false {
                            showReAuthView.toggle()
                        } else {
...

extension SettingsView {
    private var accountSection: some View {
        Section {
            // Hide log out button if user is anon
            if viewModel.authUser?.isAnonymous == false {
                Button("Log Out") {
                    homeVM.selectedTab = .movies
                    Task {
                        do {
                            try viewModel.signOut()
                            homeVM.selectedTab = .movies
                            homeVM.showSignInView = true
...
