...
                                        LazyImage(url: URL(string: user.photoUrl ?? "")) { state in
                                            if let image = state.image {
                                                image
                                                    .resizable()
                                                    .scaledToFit()
                                            } else {
                                                Image(systemName: "person.fill")
                                                    .resizable()
                                                    .scaledToFit()
                                                    .padding()
                                                    .background(Color.theme.secondary)
                                            }
                                        }
...
